--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,60 +1,58 @@
-name: Android Debug APK Build
+
 
 on:
-  # Automatic triggers
+  # التلقائي عند الدفع على الفروع المحددة أو طلبات السحب
   push:
     branches:
       - main
       - develop
       - 'feature/**'
       - 'bugfix/**'
-  
   pull_request:
     branches:
       - main
       - develop
-  
-  # Manual trigger
+  # تشغيل يدوي
   workflow_dispatch:
 
 jobs:
   build-android:
     name: Build Android Debug APK
     runs-on: ubuntu-latest
-    
+
     steps:
-      # Step 1: Check out the code
+      # 1. سحب الكود
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
-      # Step 2: Setup Java 17
+
+      # 2. إعداد Java 17
       - name: Setup Java 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-      
-      # Step 3: Setup Android SDK
+
+      # 3. إعداد Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
         with:
           api-level: 33
           target: default
           arch: x86_64
-      
-      # Step 4: Accept Android SDK Licenses
+
+      # 4. قبول تراخيص SDK
       - name: Accept Android SDK Licenses
         run: yes | sdkmanager --licenses
-      
-      # Step 5: Install Android SDK Tools
-      - name: Install Android SDK Tools
+
+      # 5. تثبيت أدوات SDK
+      - name: Install SDK Tools
         run: |
           sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0"
           sdkmanager "ndk;21.4.7075529" "cmake;3.18.1"
-      
-      # Step 6: Setup Gradle Cache
+
+      # 6. إعداد كاش Gradle
       - name: Setup Gradle Cache
         uses: actions/cache@v3
         with:
@@ -66,33 +64,39 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('mobile/android/build.gradle', 'mobile/android/gradle.properties', 'mobile/android/app/build.gradle') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      
-      # Step 7: Generate Code (Drift Database Files)
-      - name: Generate Code
+
+      # 7. توليد الكود باستخدام build_runner
+      - name: Generate code with build_runner
         run: |
           cd mobile
-          flutter packages get
-          dart run build_runner build --delete-conflicting-outputs
-      
-      # Step 8: Build Debug APK (First Attempt)
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
+
+      # 8. تنظيف المشروع قبل البناء
+      - name: Flutter Clean
+        run: |
+          cd mobile
+          flutter clean
+
+      # 9. بناء ملف APK للمطورين
       - name: Build Debug APK
         id: build_apk
         continue-on-error: true
         run: |
           cd mobile
-          flutter build apk --debug
-      
-      # Step 9: Build Debug APK (Retry with Refresh Dependencies)
+          flutter build apk --debug --build-name=debug-1 --build-number=1
+
+      # 10. إعادة البناء إذا فشل أول مرة
       - name: Build Debug APK (Retry)
         if: steps.build_apk.outcome == 'failure'
         run: |
           cd mobile
           flutter clean
-          flutter packages get
-          dart run build_runner build --delete-conflicting-outputs
-          flutter build apk --debug
-      
-      # Step 10: Verify Build Success
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
+          flutter build apk --debug --build-name=debug-1 --build-number=1
+
+      # 11. التحقق من نجاح البناء
       - name: Verify Build Success
         run: |
           cd mobile
@@ -104,8 +108,8 @@ jobs:
             ls -la build/app/outputs/ || true
             exit 1
           fi
-      
-      # Step 11: Upload APK Artifact
+
+      # 12. رفع ملف الـ APK كـ artifact
       - name: Upload APK as artifact
         if: success()
         uses: actions/upload-artifact@v3
@@ -113,16 +117,14 @@ jobs:
           name: android-debug
           path: mobile/build/app/outputs/flutter-apk/*.apk
           retention-days: 30
-      
-      # Step 12: Display Build Information
+
+      # 13. عرض معلومات البناء
       - name: Display Build Information
         run: |
           echo "🏗️ Build completed successfully!"
           echo "📱 APK Location: mobile/build/app/outputs/flutter-apk/"
           echo "📦 Artifact Name: android-debug"
           echo "🔄 Retention: 30 days"
-          
-          # Display APK details
           cd mobile
           for apk in build/app/outputs/flutter-apk/*.apk; do
             if [ -f "$apk" ]; then
@@ -132,40 +134,3 @@ jobs:
               echo "   Path: $apk"
             fi
           done
-
-  # Optional: Build summary job
-  build-summary:
-    name: Build Summary
-    runs-on: ubuntu-latest
-    needs: build-android
-    if: always()
-    
-    steps:
-      - name: Build Summary
-        run: |
-          echo "## 📱 Android Build Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          if [ "${{ needs.build-android.result }}" == "success" ]; then
-            echo "✅ **Build Status**: Success" >> $GITHUB_STEP_SUMMARY
-            echo "📦 **Artifact**: android-debug" >> $GITHUB_STEP_SUMMARY
-            echo "🎯 **Build Type**: Debug APK" >> $GITHUB_STEP_SUMMARY
-            echo "⏱️ **Retention**: 30 days" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "### 📥 Download Instructions" >> $GITHUB_STEP_SUMMARY
-            echo "1. Go to the **Actions** tab" >> $GITHUB_STEP_SUMMARY
-            echo "2. Click on this workflow run" >> $GITHUB_STEP_SUMMARY
-            echo "3. Scroll down to **Artifacts**" >> $GITHUB_STEP_SUMMARY
-            echo "4. Download **android-debug**" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "❌ **Build Status**: Failed" >> $GITHUB_STEP_SUMMARY
-            echo "🔍 **Action Required**: Check build logs for errors" >> $GITHUB_STEP_SUMMARY
-          fi
-          
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 🔧 Build Configuration" >> $GITHUB_STEP_SUMMARY
-          echo "- **OS**: Ubuntu Latest" >> $GITHUB_STEP_SUMMARY
-          echo "- **Java**: 17 (Temurin)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Android API**: 33" >> $GITHUB_STEP_SUMMARY
-          echo "- **Build Tool**: Gradle" >> $GITHUB_STEP_SUMMARY
-          echo "- **Caching**: Enabled" >> $GITHUB_STEP_SUMMARY
