--- a/Flutter .prompt.yml
+++ b/Flutter .prompt.yml
@@ -1,4 +1,6 @@
 messages:
   - role: system
     content: 'Repair fix my flutter project '
+  - role: user
+    content: 'Build apk '
 model: deepseek/deepseek-r1
