--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -17,6 +17,15 @@ jobs:
         working-directory: mobile
     steps:
       - uses: actions/checkout@v4
+      
+      - name: 🧹 تنظيف الكاش القديم (عند workflow_dispatch)
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "🧹 تنظيف gradle cache..."
+          rm -rf ~/.gradle/caches/ 2>/dev/null || true
+          rm -rf ~/.gradle/wrapper/ 2>/dev/null || true
+          echo "✅ تم تنظيف الكاش"
+      
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -26,6 +35,21 @@ jobs:
           channel: stable
           flutter-version: '3.24.0'
           cache: true
+      - name: 🔍 فحص المتطلبات والبيئة
+        run: |
+          echo "=== 🔍 فحص المتطلبات ==="
+          echo ""
+          echo "📱 Flutter SDK:"
+          which flutter && flutter --version || echo "❌ Flutter not found"
+          echo ""
+          echo "☕ Java version:"
+          java -version 2>&1 | head -3
+          echo ""
+          echo "💾 Available disk space:"
+          df -h | grep -E '^Filesystem|/$'
+          echo ""
+          echo "✅ فحص المتطلبات مكتمل"
+      
       - name: Install dependencies
         run: |
           flutter --version
@@ -56,8 +80,38 @@ jobs:
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
           echo "date=$DATE" >> $GITHUB_OUTPUT
       - name: Build APK (release, split per ABI)
+        timeout-minutes: 25
         run: |
-          flutter build apk --release --build-number "${{ steps.ver.outputs.build_number }}" --target-platform android-arm,android-arm64,android-x64 --split-per-abi
+          echo "📱 بدء بناء Release APKs..."
+          echo "📊 رقم الإصدار: ${{ steps.ver.outputs.build_number }}"
+          echo ""
+          
+          set +e
+          flutter build apk --release \
+            --build-number "${{ steps.ver.outputs.build_number }}" \
+            --target-platform android-arm,android-arm64,android-x64 \
+            --split-per-abi \
+            --verbose
+          
+          BUILD_EXIT_CODE=$?
+          set -e
+          
+          if [ $BUILD_EXIT_CODE -ne 0 ]; then
+            echo ""
+            echo "❌ فشل بناف Release APKs"
+            echo "================================"
+            echo ""
+            echo "📂 محتويات build:"
+            find build -type f 2>/dev/null | head -30 || true
+            echo ""
+            echo "📋 Gradle logs:"
+            find android/.gradle -name "*.log" -type f -exec tail -100 {} \; 2>/dev/null || true
+            echo ""
+            exit 1
+          fi
+          
+          echo "✅ تم بناء Release APKs بنجاح"
+          ls -lh build/app/outputs/flutter-apk/*-release.apk
       - name: Build AAB (release)
         run: |
           flutter build appbundle --release --build-number "${{ steps.ver.outputs.build_number }}"
@@ -75,16 +129,49 @@ jobs:
             cp "$f" "../releases/apk/marina-hotel-v${{ steps.ver.outputs.version_name }}-${abi}.apk"
           done
           cp build/app/outputs/bundle/release/app-release.aab "../releases/apk/marina-hotel-v${{ steps.ver.outputs.version_name }}.aab"
-      - name: APK health check
+      - name: ✅ فحص صحة APKs النهائي
         run: |
+          echo "🔍 فحص صحة APKs المُنتَجة..."
+          echo "================================"
           set -e
           cd ../releases/apk
+          
           for f in *.apk; do
+            echo ""
+            echo "📦 فحص: $f"
+            
+            # فحص الحجم
+            SIZE=$(stat -c%s "$f" 2>/dev/null || stat -f%z "$f")
+            MIN_SIZE=10000000  # 10 MB للـ release
+            
+            if [ "$SIZE" -lt "$MIN_SIZE" ]; then
+              echo "❌ فشل: حجم APK صغير جداً ($SIZE bytes < $MIN_SIZE bytes)"
+              exit 1
+            fi
+            echo "  ✓ الحجم: $SIZE bytes"
+            
+            # فحص أن الملف APK صحيح (Zip archive)
+            if ! file "$f" | grep -q "Zip archive"; then
+              echo "❌ فشل: الملف ليس APK صحيح"
+              file "$f"
+              exit 1
+            fi
+            echo "  ✓ نوع الملف: Zip archive"
+            
+            # فحص محتويات APK
             unzip -l "$f" >/dev/null
             if ! unzip -l "$f" | grep -q AndroidManifest.xml; then
-              echo "Invalid APK: $f"; exit 1
+              echo "❌ فشل: AndroidManifest.xml غير موجود في $f"
+              exit 1
             fi
+            echo "  ✓ AndroidManifest.xml موجود"
+            
+            echo "✅ $f صحيح"
           done
+          
+          echo ""
+          echo "================================"
+          echo "✅ جميع APKs صحيحة وجاهزة للإصدار"
       - name: Generate checksums and notes
         id: meta
         run: |
