--- a/.github/workflows/build_kolin-marina.yml
+++ b/.github/workflows/build_kolin-marina.yml
@@ -30,8 +30,8 @@ jobs:
         working-directory: kotlin-marina
         run: |
           echo "sdk.dir=${ANDROID_SDK_ROOT}" > local.properties
-          yes | ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --licenses
-          ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+          yes | ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses
+          ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} "platform-tools" "platforms;android-34" "build-tools;34.0.0"
 
       - name: Gradle cache
         uses: gradle/gradle-build-action@v3
