--- a/.github/workflows/build_kolin-marina.yml
+++ b/.github/workflows/build_kolin-marina.yml
@@ -28,10 +28,7 @@ jobs:
 
       - name: Prepare Android SDK
         working-directory: kotlin-marina
-        run: |
-          echo "sdk.dir=${ANDROID_SDK_ROOT}" > local.properties
-          yes | ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} --licenses
-          ${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager --sdk_root=${ANDROID_SDK_ROOT} "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+        run: echo "sdk.dir=${ANDROID_SDK_ROOT}" > local.properties
 
       - name: Gradle cache
         uses: gradle/gradle-build-action@v3
